fixed headshot container CSS alignment, fixed body flex container

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+/* Remove Scroll Bar */
+
+* ::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     min-height: 100vh;
     background-color: #ffebf1; 
@@ -121,10 +127,15 @@ nav a:hover {
 
 .bodyContainer {
     display: flex;
-    flex-direction: column;
-    padding-left: 5%;
-    padding-right: 5%;
-    margin-bottom: 30%;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 50px;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-left: 40px;
+    margin-right: 40px;
+    max-width: 95%;
+    position: relative;
 }
 .content {
     display: flex;
@@ -133,22 +144,22 @@ nav a:hover {
     margin-left: 20px;
 }
 .headshotContainer {
-    position: fixed;
+    flex: 1 1 20%;
     display: flex;
-    min-width: 25%;
-    max-width: 25%;
-    height: 75%
+    flex-direction: column;
+    align-items: center;
+    position: sticky; /* follow scroll */
+    top: 100px;
+    margin: 0;
+    max-width: 400px;
 }
-#empty {
-    width: 20px;
-}
+
 .headshotItem {
     flex: 0 0 20%;
     flex-direction: column;
     top: 100px;
     bottom: 50px;
-    align-self: flex-start;
-    align-items: center;      
+        
     justify-content: flex-start;
     border-radius: 20px;
     
@@ -168,20 +179,16 @@ nav a:hover {
 .underSide {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     width: 100%;
     
 }
 /* Dark mode version */
-@media (prefers-color-scheme: dark) {
-    .headshotItem {
-        background: rgba(199, 21, 133, 0.3); /* dark pink/magenta tint */
-        border: 1px solid rgba(199, 21, 133, 0.5);
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.6);
-    }
-}
+
 .headshotItem img {
     display: block;
-    margin: 0 auto;
     border-radius: 16px; /* Rounded corners */
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1), inset 0 2px 8px rgba(255, 255, 255, 0.2); /* Depth and inner glow * */
     opacity: 85%;
@@ -216,8 +223,10 @@ nav a:hover {
 
 .rightContent {
     color: black;
-    
+    flex: 1 1 80%;
+    max-width: 55%;
     padding-left: 20px;
+    position: static;
     
     
 }
@@ -402,7 +411,6 @@ nav a:hover {
     position: sticky;
 }
 .liquid-glass-element {
-    position: relative;
     background: rgba(255, 255, 255, 0.15); /* Semi-transparent background */
     backdrop-filter: blur(8px) saturate(180%); /* Frosted glass effect */
     border: 1px solid rgba(255, 255, 255, 0.3); /* Subtle border */
@@ -412,7 +420,7 @@ nav a:hover {
 
 .liquid-glass-element::after {
     content: '';
-    position: absolute;
+    position:relative ;
     top: 0;
     left: 0;
     width: 100%;
